--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1029,7 +1029,6 @@ payload:
   - '+.114jcw.com'
   - '+.114jia.net'
   - '+.114la.com'
-  - '+.114ljc.com'
   - '+.114mall.com'
   - '+.114menhu.com'
   - '+.114mo.com'
@@ -2182,6 +2181,7 @@ payload:
   - '+.218257.com'
   - '+.218318.com'
   - '+.218573.com'
+  - '+.218574.com'
   - '+.218953.com'
   - '+.218996.com'
   - '+.2197079.com'
@@ -2527,6 +2527,7 @@ payload:
   - '+.268593.com'
   - '+.2686.com'
   - '+.268612.com'
+  - '+.268616.com'
   - '+.2688.com'
   - '+.268888.net'
   - '+.268v.com'
@@ -3301,8 +3302,10 @@ payload:
   - '+.37274.com'
   - '+.373.com'
   - '+.373135.com'
+  - '+.373258.com'
   - '+.373294.com'
   - '+.3733.com'
+  - '+.373391.com'
   - '+.3737.com'
   - '+.3737g.com'
   - '+.3737k.com'
@@ -3457,7 +3460,6 @@ payload:
   - '+.3dkoukou.com'
   - '+.3dkunshan.com'
   - '+.3dllc.cc'
-  - '+.3dlvyou.com'
   - '+.3dly.com'
   - '+.3dmax8.com'
   - '+.3dmaxvip.com'
@@ -5535,6 +5537,7 @@ payload:
   - '+.6168511.com'
   - '+.616pic.com'
   - '+.616wan.com'
+  - '+.618296.com'
   - '+.618344.com'
   - '+.618351.com'
   - '+.6186.com'
@@ -5565,7 +5568,6 @@ payload:
   - '+.61sou.com'
   - '+.61tg.com'
   - '+.61vps.com'
-  - '+.61ww.com'
   - '+.61xiangce.com'
   - '+.62.com'
   - '+.6210k.com'
@@ -6442,6 +6444,7 @@ payload:
   - '+.81761.com'
   - '+.817711.com'
   - '+.818.com'
+  - '+.818537.com'
   - '+.818it.com'
   - '+.818ps.com'
   - '+.818rmb.com'
@@ -6522,7 +6525,6 @@ payload:
   - '+.84fk.com'
   - '+.84ktv.com'
   - '+.84lm.net'
-  - '+.84piao.com'
   - '+.84zcb.com'
   - '+.84zhu.com'
   - '+.85.com'
@@ -6534,7 +6536,6 @@ payload:
   - '+.85384.com'
   - '+.853lab.com'
   - '+.8548965.com'
-  - '+.854967.com'
   - '+.8558.org'
   - '+.85679999.com'
   - '+.85814.com'
@@ -7409,7 +7410,6 @@ payload:
   - '+.98158.com'
   - '+.9823df.com'
   - '+.9831.com'
-  - '+.984967.com'
   - '+.984g.com'
   - '+.985.so'
   - '+.98523.com'
@@ -8564,7 +8564,6 @@ payload:
   - '+.aituan.com'
   - '+.aitupian.com'
   - '+.aituwo.com'
-  - '+.aitxt.com'
   - '+.aityp.com'
   - '+.aiurl.com'
   - '+.aiuw.com'
@@ -8914,7 +8913,6 @@ payload:
   - '+.alizhaopin.com'
   - '+.alizila.com'
   - '+.alkuyi.com'
-  - '+.all-dream.com'
   - '+.all3c.com'
   - '+.all4seiya.net'
   - '+.allappapi.com'
@@ -8978,7 +8976,6 @@ payload:
   - '+.alswl.com'
   - '+.altstory.com'
   - '+.altxw.com'
-  - '+.alu1886.com'
   - '+.aluaa.com'
   - '+.alumni-cn.org'
   - '+.alumni-scut.org'
@@ -9860,7 +9857,6 @@ payload:
   - '+.atoolbox.net'
   - '+.atop.fun'
   - '+.atpanel.com'
-  - '+.atpapapa.com'
   - '+.atriumlee.com'
   - '+.atstudy.com'
   - '+.attakids.com'
@@ -11228,6 +11224,7 @@ payload:
   - '+.bg.v4.a.dl.ws.microsoft.com'
   - '+.bg4.v4.a.dl.ws.microsoft.com'
   - '+.bgbk.org'
+  - '+.bgc5.com'
   - '+.bgctv.com'
   - '+.bgcyygl.com'
   - '+.bgdeco.com'
@@ -15155,7 +15152,6 @@ payload:
   - '+.chinasie.com'
   - '+.chinasilk.com'
   - '+.chinasiwei.com'
-  - '+.chinasky.net'
   - '+.chinasmartpay.com'
   - '+.chinasnow.net'
   - '+.chinasnw.com'
@@ -16209,7 +16205,6 @@ payload:
   - '+.cnair.com'
   - '+.cnal.com'
   - '+.cname-cdn.com'
-  - '+.cname-url.com'
   - '+.cname123.net'
   - '+.cnamegslb.com'
   - '+.cnantennas.com'
@@ -16809,7 +16804,6 @@ payload:
   - '+.codebe.org'
   - '+.codebus.net'
   - '+.codebye.com'
-  - '+.codecoke.com'
   - '+.codedefault.com'
   - '+.codedocs.net'
   - '+.codedq.net'
@@ -17904,7 +17898,6 @@ payload:
   - '+.cydp5.com'
   - '+.cyedu.org'
   - '+.cyegushi.com'
-  - '+.cyepai.com'
   - '+.cyfeng.com'
   - '+.cyfengchao.com'
   - '+.cyhd.net'
@@ -18130,7 +18123,6 @@ payload:
   - '+.dadetong.com'
   - '+.dadianstudio.com'
   - '+.dadicinema.com'
-  - '+.dadighost.com'
   - '+.dadijilu.com'
   - '+.dadipedia.com'
   - '+.dadiwang.com'
@@ -19205,6 +19197,7 @@ payload:
   - '+.diannaoban.com'
   - '+.diannaodian.com'
   - '+.diannaokepu.com'
+  - '+.diannaoshiyong.com'
   - '+.diannaoxianka.com'
   - '+.dianopen.com'
   - '+.dianou.com'
@@ -19335,6 +19328,7 @@ payload:
   - '+.dietfd.com'
   - '+.diexia.com'
   - '+.difanapp.com'
+  - '+.difangfengsu.com'
   - '+.digcredit.com'
   - '+.digforfire.net'
   - '+.digforfire.org'
@@ -27697,7 +27691,6 @@ payload:
   - '+.heyinguanli.com'
   - '+.heymore.com'
   - '+.heyou51.com'
-  - '+.heyoutz.com'
   - '+.heyplus.com'
   - '+.heyreport.com'
   - '+.heyria.com'
@@ -31929,7 +31922,6 @@ payload:
   - '+.iuniware.com'
   - '+.iuoooo.com'
   - '+.iuplus.com'
-  - '+.iuuu9.com'
   - '+.iuynfg.com'
   - '+.ivali.com'
   - '+.ivan.xin'
@@ -33028,6 +33020,7 @@ payload:
   - '+.jinduoduo.net'
   - '+.jinenrunze.com'
   - '+.jinfangka.com'
+  - '+.jinfantongyici.com'
   - '+.jinfengkou.com'
   - '+.jinfengpaint.com'
   - '+.jinfengwine.com'
@@ -33416,7 +33409,6 @@ payload:
   - '+.jiyili.net'
   - '+.jiyin-tech.com'
   - '+.jiyin2020.com'
-  - '+.jiyingw.net'
   - '+.jiyixcx.com'
   - '+.jiyiyq.com'
   - '+.jiyou-tech.com'
@@ -34635,7 +34627,6 @@ payload:
   - '+.jztvxmt.com'
   - '+.jztylxx.com'
   - '+.jztzw.net'
-  - '+.jzvip.cc'
   - '+.jzwcom.com'
   - '+.jzxs.com'
   - '+.jzxue.com'
@@ -35519,6 +35510,7 @@ payload:
   - '+.knoya.com'
   - '+.knsheng.com'
   - '+.knsyxw.com'
+  - '+.kny999.com'
   - '+.knzlcq.com'
   - '+.koal.com'
   - '+.koalacam.net'
@@ -38678,12 +38670,10 @@ payload:
   - '+.lwlm.com'
   - '+.lwons.com'
   - '+.lwork.com'
-  - '+.lwqwq.com'
   - '+.lwrcb.com'
   - '+.lwsay.com'
   - '+.lwswxs.com'
   - '+.lwtxt.cc'
-  - '+.lwurl.to'
   - '+.lwxgds.com'
   - '+.lwxiaoshuo.com'
   - '+.lwxs.org'
@@ -40281,7 +40271,6 @@ payload:
   - '+.minglian.com'
   - '+.mingliu8.com'
   - '+.mingliwenhua.com'
-  - '+.mingluji.com'
   - '+.mingmen-tech.com'
   - '+.mingpian.biz'
   - '+.mingqizhongyi.com'
@@ -41013,6 +41002,7 @@ payload:
   - '+.mrsu.me'
   - '+.mrtbc.com'
   - '+.mrw.so'
+  - '+.mrwfbk.bar'
   - '+.mrwish.net'
   - '+.mrzhenggang.com'
   - '+.mrzl.com'
@@ -42361,9 +42351,11 @@ payload:
   - '+.njzhzx.net'
   - '+.njzztyl.com'
   - '+.nk84.com'
+  - '+.nkp969.com'
   - '+.nkscdn.com'
   - '+.nktaba.com'
   - '+.nktxv.com'
+  - '+.nky556.com'
   - '+.nkyp.com'
   - '+.nlark.com'
   - '+.nlinkline.com'
@@ -42471,7 +42463,6 @@ payload:
   - '+.nongfuspring.com'
   - '+.nongji1688.com'
   - '+.nongji360.com'
-  - '+.nongjia888.com'
   - '+.nongjiaba.com'
   - '+.nongjitong.com'
   - '+.nongjx.com'
@@ -42563,6 +42554,7 @@ payload:
   - '+.npoll.net'
   - '+.npp.cc'
   - '+.npxsw.com'
+  - '+.npy858.com'
   - '+.npyun.com'
   - '+.npz.com'
   - '+.nq.com'
@@ -42898,6 +42890,7 @@ payload:
   - '+.officeedit.com'
   - '+.officejc.net'
   - '+.officese.com'
+  - '+.officesoftcn.com'
   - '+.officeweb365.com'
   - '+.officewj.com'
   - '+.officexr.com'
@@ -42939,6 +42932,7 @@ payload:
   - '+.oilepay.com'
   - '+.oilhr.com'
   - '+.oiuwe.com'
+  - '+.oj03.com'
   - '+.ok-meeting.com'
   - '+.ok06.com'
   - '+.ok1616.com'
@@ -43846,7 +43840,6 @@ payload:
   - '+.pc51.com'
   - '+.pc521.net'
   - '+.pc5210.com'
-  - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc70.com'
   - '+.pc811.com'
@@ -45684,7 +45677,6 @@ payload:
   - '+.qinco.net'
   - '+.qineasy.com'
   - '+.qinfan.xyz'
-  - '+.qinfukai.com'
   - '+.qing-shan.com'
   - '+.qing.su'
   - '+.qing5.com'
@@ -45833,7 +45825,6 @@ payload:
   - '+.qiqiww.com'
   - '+.qiqu.la'
   - '+.qiquhudong.com'
-  - '+.qiquting.com'
   - '+.qire123.com'
   - '+.qiredy.com'
   - '+.qiremanhua.com'
@@ -46150,7 +46141,6 @@ payload:
   - '+.qqgx.com'
   - '+.qqgyhk.com'
   - '+.qqhao123.com'
-  - '+.qqhaoniu.com'
   - '+.qqhbx.com'
   - '+.qqhelper.net'
   - '+.qqhot.com'
@@ -46335,6 +46325,7 @@ payload:
   - '+.qtumist.com'
   - '+.qtx.com'
   - '+.qtyd.com'
+  - '+.qu.la'
   - '+.qu02.com'
   - '+.qu114.com'
   - '+.qu247.com'
@@ -46867,7 +46858,6 @@ payload:
   - '+.rccchina.com'
   - '+.rccoder.net'
   - '+.rcdang.com'
-  - '+.rcdio.com'
   - '+.rcdn.fun'
   - '+.rcfans.com'
   - '+.rcgus.com'
@@ -47494,7 +47484,6 @@ payload:
   - '+.rrxiu.me'
   - '+.rrxiu.net'
   - '+.rrys.tv'
-  - '+.rrysapp.com'
   - '+.rrzuji.com'
   - '+.rrzxw.net'
   - '+.rs05.com'
@@ -48034,7 +48023,6 @@ payload:
   - '+.sccsfxdq.com'
   - '+.sccts.com'
   - '+.sccwz.com'
-  - '+.scdakj.com'
   - '+.scdbzzw.com'
   - '+.scdn1e8v.com'
   - '+.scdnf80r.com'
@@ -49433,6 +49421,7 @@ payload:
   - '+.shouji56-img.com'
   - '+.shouji56.com'
   - '+.shoujibao.net'
+  - '+.shoujidaren.com'
   - '+.shoujiduoduo.com'
   - '+.shoujihuifu.com'
   - '+.shoujikanshu.cc'
@@ -50777,7 +50766,6 @@ payload:
   - '+.sooopu.com'
   - '+.soopat.com'
   - '+.soopay.net'
-  - '+.sooshong.com'
   - '+.sooshu.net'
   - '+.soosmart.com'
   - '+.sootoo.com'
@@ -53205,7 +53193,6 @@ payload:
   - '+.tianelian.com'
   - '+.tianfeiyu.com'
   - '+.tianfupic.com'
-  - '+.tianfus.com'
   - '+.tianfusoftwarepark.com'
   - '+.tianhaijiaodai.com'
   - '+.tianhaohz.com'
@@ -57886,7 +57873,6 @@ payload:
   - '+.wifidown.com'
   - '+.wifigushi.com'
   - '+.wifigx.com'
-  - '+.wifiing.net'
   - '+.wifimsl.com'
   - '+.wifire.net'
   - '+.wifishenqi.com'
@@ -58327,7 +58313,6 @@ payload:
   - '+.wogame.net'
   - '+.wogoo.com'
   - '+.wohenizaiyiqi.com'
-  - '+.wohenok.com'
   - '+.wohxx.com'
   - '+.woi3d.com'
   - '+.woiyu.com'
@@ -59009,6 +58994,7 @@ payload:
   - '+.wxb.com'
   - '+.wxbady.com'
   - '+.wxbdfm.com'
+  - '+.wxbjq.wang'
   - '+.wxblockchain.com'
   - '+.wxbm04.com'
   - '+.wxbrandway.com'
@@ -60020,7 +60006,6 @@ payload:
   - '+.xiaoshouhudong.com'
   - '+.xiaoshoukuaifa.com'
   - '+.xiaoshouyi.com'
-  - '+.xiaoshouzhi.com'
   - '+.xiaoshu168.com'
   - '+.xiaoshujiang.com'
   - '+.xiaoshukaihua.com'
@@ -60729,7 +60714,6 @@ payload:
   - '+.xixiarc.com'
   - '+.xixibobo.com'
   - '+.xixiclothing.com'
-  - '+.xixihd.com'
   - '+.xixijiji.com'
   - '+.xixik.com'
   - '+.xixik.net'
@@ -60988,7 +60972,6 @@ payload:
   - '+.xmtbang.com'
   - '+.xmtekic.com'
   - '+.xmttz02.pw'
-  - '+.xmtyl.com'
   - '+.xmtyy02.pw'
   - '+.xmtyy04.pw'
   - '+.xmuchong.com'
@@ -61152,6 +61135,7 @@ payload:
   - '+.xrunda.com'
   - '+.xrwcn.com'
   - '+.xs-servers.com'
+  - '+.xs.la'
   - '+.xs222.tw'
   - '+.xs2500.com'
   - '+.xs321.com'
@@ -61550,7 +61534,6 @@ payload:
   - '+.xwjr.com'
   - '+.xwjy.org'
   - '+.xwko.com'
-  - '+.xwlmx.com'
   - '+.xwlunwen.com'
   - '+.xwlxw.com'
   - '+.xwood.net'
@@ -62172,7 +62155,6 @@ payload:
   - '+.ycool.com'
   - '+.ycpack.net'
   - '+.ycpai.com'
-  - '+.ycqedu.net'
   - '+.ycrh-tattoo.com'
   - '+.ycrusher.com'
   - '+.ycsgame.com'
@@ -63111,7 +63093,6 @@ payload:
   - '+.yk08.com'
   - '+.yk211.com'
   - '+.ykadx.com'
-  - '+.ykanxiaoshuo.com'
   - '+.ykccn.com'
   - '+.ykclass.com'
   - '+.ykdgd.com'
@@ -63120,7 +63101,10 @@ payload:
   - '+.ykimg.com'
   - '+.ykinvestment.com'
   - '+.ykjhdc.com'
+  - '+.ykn956.com'
+  - '+.ykn966.com'
   - '+.ykntv.com'
+  - '+.ykp568.com'
   - '+.ykplg.com'
   - '+.ykpxxx.com'
   - '+.ykq.ink'
@@ -63413,6 +63397,7 @@ payload:
   - '+.yoolin.cc'
   - '+.yoooooooooo.com'
   - '+.yoopu.me'
+  - '+.yootou.com'
   - '+.yoouxi.com'
   - '+.yooxun.com'
   - '+.yooxuu.com'
