--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1649,7 +1649,6 @@ payload:
   - '+.17byh.com'
   - '+.17cai.com'
   - '+.17caifu.com'
-  - '+.17cdn.com'
   - '+.17ce.com'
   - '+.17chacn.com'
   - '+.17chuang.cc'
@@ -1935,7 +1934,6 @@ payload:
   - '+.1cnmedia.com'
   - '+.1cno.com'
   - '+.1cnw.com'
-  - '+.1d18b.com'
   - '+.1d1d100.com'
   - '+.1d9z.com'
   - '+.1dao99.com'
@@ -12051,7 +12049,6 @@ payload:
   - '+.blkkj.com'
   - '+.bln7.com'
   - '+.bln8.com'
-  - '+.blnjw.com'
   - '+.block288.com'
   - '+.blockchain.hk'
   - '+.blockchain123.com'
@@ -13098,7 +13095,6 @@ payload:
   - '+.caisan.io'
   - '+.caishen66.com'
   - '+.caishencai.com'
-  - '+.caisheng.net'
   - '+.caishenpo.com'
   - '+.caishenwang.online'
   - '+.caishimv.com'
@@ -13381,7 +13377,6 @@ payload:
   - '+.cc8.cc'
   - '+.ccabchina.com'
   - '+.ccai.cc'
-  - '+.ccaiye.com'
   - '+.ccapbook.com'
   - '+.ccapedu.com'
   - '+.ccartd.com'
@@ -17140,7 +17135,6 @@ payload:
   - '+.cpitsh.org'
   - '+.cpjltx.com'
   - '+.cplchain.com'
-  - '+.cpnic.com'
   - '+.cpo.xyz'
   - '+.cpo2o.com'
   - '+.cpolar.com'
@@ -17300,7 +17294,6 @@ payload:
   - '+.cqsms.net'
   - '+.cqsoft.org'
   - '+.cqsxedu.com'
-  - '+.cqsy.org'
   - '+.cqt8.com'
   - '+.cqtally.co'
   - '+.cqtally.com'
@@ -18958,7 +18951,6 @@ payload:
   - '+.dewmobile.net'
   - '+.dewu.com'
   - '+.dewumall.com'
-  - '+.dexcoder.com'
   - '+.dexian.mobi'
   - '+.dexindat.com'
   - '+.dexingrv.com'
@@ -20609,6 +20601,7 @@ payload:
   - '+.dxias.com'
   - '+.dxjs.com'
   - '+.dxlfile.com'
+  - '+.dxlmdd.com'
   - '+.dxmpay.com'
   - '+.dxmstatic.com'
   - '+.dxnf.xyz'
@@ -21760,11 +21753,9 @@ payload:
   - '+.eqiseo.com'
   - '+.eqishare.com'
   - '+.eqixiu.com'
-  - '+.eqq9.com'
   - '+.equn.com'
   - '+.eqxiu.com'
   - '+.eqxiu.mobi'
-  - '+.eqxiu.tv'
   - '+.eqxiul.com'
   - '+.eqxiuzhan.com'
   - '+.eqyn.com'
@@ -27456,7 +27447,6 @@ payload:
   - '+.heigaga.com'
   - '+.heiguang.com'
   - '+.heiguang.net'
-  - '+.heiguisf.com'
   - '+.heijiao.net'
   - '+.heijiazi.com'
   - '+.heijin.org'
@@ -27754,6 +27744,7 @@ payload:
   - '+.hfyestar.com'
   - '+.hfyjgg.com'
   - '+.hfykd.com'
+  - '+.hfyouqi.com'
   - '+.hfyt365.com'
   - '+.hg-daigou.com'
   - '+.hg-z.com'
@@ -32362,7 +32353,6 @@ payload:
   - '+.jdjygold.com'
   - '+.jdjys.com'
   - '+.jdkcb.com'
-  - '+.jdkindle.com'
   - '+.jdl.com'
   - '+.jdluosi.com'
   - '+.jdlxzx.com'
@@ -32915,6 +32905,7 @@ payload:
   - '+.jifangcheng.com'
   - '+.jifenapp.com'
   - '+.jifenfu.net'
+  - '+.jifengba.com'
   - '+.jifengdm.com'
   - '+.jifenh.com'
   - '+.jifenzhong.com'
@@ -35149,7 +35140,6 @@ payload:
   - '+.kevinjiang.info'
   - '+.kevinlq.com'
   - '+.kewail.com'
-  - '+.kewu.cc'
   - '+.kexianggroup.com'
   - '+.kexin001.com'
   - '+.kexing100.com'
@@ -35252,7 +35242,6 @@ payload:
   - '+.kindeditor.net'
   - '+.kindle-china.org'
   - '+.kindle114.com'
-  - '+.kindle8.cc'
   - '+.kindlehub.mobi'
   - '+.kindlelib.com'
   - '+.kindleport.com'
@@ -37895,6 +37884,7 @@ payload:
   - '+.lmth2013.com'
   - '+.lmtw.com'
   - '+.lmtxz1.com'
+  - '+.lmubbs.com'
   - '+.lmview.com'
   - '+.lmwgame.com'
   - '+.lmwlhh.com'
@@ -42208,7 +42198,6 @@ payload:
   - '+.nipei.com'
   - '+.nipic.com'
   - '+.nishuoa.com'
-  - '+.nisure.net'
   - '+.nitaitag.com'
   - '+.nitianxieshen.com'
   - '+.nitutu.com'
@@ -42217,7 +42206,6 @@ payload:
   - '+.niua.com'
   - '+.niuacc.com'
   - '+.niuap.com'
-  - '+.niubafa.com'
   - '+.niubb.com'
   - '+.niubb.net'
   - '+.niubi114.com'
@@ -43796,7 +43784,6 @@ payload:
   - '+.patachina.org'
   - '+.patchallin.com'
   - '+.patchew.org'
-  - '+.patent-cn.com'
   - '+.patent9.com'
   - '+.patexplorer.com'
   - '+.patindex.com'
@@ -49395,7 +49382,6 @@ payload:
   - '+.shouce.ren'
   - '+.shouce365.com'
   - '+.shouchaobao.com'
-  - '+.shouchaobaoquan.com'
   - '+.shoucheng123.com'
   - '+.shoucw.com'
   - '+.shoudayy.net'
@@ -50769,14 +50755,12 @@ payload:
   - '+.soozhu.com'
   - '+.sopaimai.com'
   - '+.sopanxia.com'
-  - '+.sopdr.com'
   - '+.soperson.com'
   - '+.soppt.com'
   - '+.sopuning.com'
   - '+.soq.com'
   - '+.soqicrm.com'
   - '+.soquair.com'
-  - '+.sorazone.com'
   - '+.sorpack.com'
   - '+.sos919.com'
   - '+.sosaw.com'
@@ -51772,7 +51756,6 @@ payload:
   - '+.sxcyts.com'
   - '+.sxcywy.com'
   - '+.sxd408.com'
-  - '+.sxddgxcy.com'
   - '+.sxdkj.com'
   - '+.sxdwsx.com'
   - '+.sxdygbjy.com'
@@ -52502,7 +52485,6 @@ payload:
   - '+.tao885.com'
   - '+.taoad.com'
   - '+.taoba568.com'
-  - '+.taobangban.com'
   - '+.taobao-img.com'
   - '+.taobao.com'
   - '+.taobao.cz'
@@ -52599,6 +52581,7 @@ payload:
   - '+.taotao.com'
   - '+.taotaocar.com'
   - '+.taotaosou.com'
+  - '+.taotieren.com'
   - '+.taotiwang.com'
   - '+.taotu8.net'
   - '+.taotumowang.com'
@@ -53136,7 +53119,6 @@ payload:
   - '+.thstp.com'
   - '+.thsyyxgs.com'
   - '+.thtfpc.com'
-  - '+.thtxzyz.com'
   - '+.thumedialab.com'
   - '+.thundercdn.net'
   - '+.thunderflash.net'
@@ -54906,7 +54888,6 @@ payload:
   - '+.uc108.com'
   - '+.uc123.com'
   - '+.uc129.com'
-  - '+.uc138.com'
   - '+.uc1z.com'
   - '+.uc23.net'
   - '+.uc56.com'
@@ -55925,7 +55906,6 @@ payload:
   - '+.vippluspai.com'
   - '+.vipqlz.com'
   - '+.vips100.com'
-  - '+.vipshan.com'
   - '+.vipshop.com'
   - '+.vipshopyao.com'
   - '+.vipsinaapp.com'
@@ -56011,7 +55991,6 @@ payload:
   - '+.vkvr.net'
   - '+.vl520.com'
   - '+.vlabstatic.com'
-  - '+.vlambda.com'
   - '+.vlan9.com'
   - '+.vlandgroup.com'
   - '+.vlcms.com'
@@ -57298,7 +57277,6 @@ payload:
   - '+.wendangmao.net'
   - '+.wendangwang.com'
   - '+.wendangxiazai.com'
-  - '+.wendasou.com'
   - '+.wendax.com'
   - '+.wendaxiaowu.com'
   - '+.wenday.com'
@@ -64686,7 +64664,6 @@ payload:
   - '+.yyjzt.com'
   - '+.yyk100.com'
   - '+.yyk2.com'
-  - '+.yykaoo.com'
   - '+.yykepu.com'
   - '+.yykj.org'
   - '+.yylending.com'
@@ -64841,7 +64818,6 @@ payload:
   - '+.zaixian-fanyi.com'
   - '+.zaixianfanyi.com'
   - '+.zaixianjianli.com'
-  - '+.zaixiankan.net'
   - '+.zaixiankaoshi.com'
   - '+.zaixs.com'
   - '+.zaixuchang.com'
@@ -65730,7 +65706,6 @@ payload:
   - '+.zhidao91.com'
   - '+.zhidaoanli.com'
   - '+.zhidaoketang.com'
-  - '+.zhideedu.com'
   - '+.zhidesoft.com'
   - '+.zhideyimai.com'
   - '+.zhidian3g.com'
@@ -66099,7 +66074,6 @@ payload:
   - '+.zhoujiping.com'
   - '+.zhoulaoshi.club'
   - '+.zhoulingjie.com'
-  - '+.zhour.net'
   - '+.zhoushangren.com'
   - '+.zhouxiao.me'
   - '+.zhouxingchi.info'
