--- a/directbak.yaml
+++ b/directbak.yaml
@@ -665,7 +665,6 @@ payload:
   - '+.0898cfw.com'
   - '+.0898hq.com'
   - '+.0898mmf.com'
-  - '+.0898qw.com'
   - '+.0898xbfc.com'
   - '+.089u.com'
   - '+.08an.com'
@@ -675,7 +674,6 @@ payload:
   - '+.08g.cc'
   - '+.08ky.com'
   - '+.08px.com'
-  - '+.0907yy.vip'
   - '+.090expo.com'
   - '+.0912app.com'
   - '+.0914cn.com'
@@ -991,7 +989,6 @@ payload:
   - '+.1122.com'
   - '+.11222.com'
   - '+.1122dh.com'
-  - '+.1123095.com'
   - '+.1124.cc'
   - '+.1128.org'
   - '+.112812.com'
@@ -1865,6 +1862,7 @@ payload:
   - '+.18zg.com'
   - '+.18zhuanqian.com'
   - '+.18zw.com'
+  - '+.1903it.com'
   - '+.1905.com'
   - '+.1905kk.com'
   - '+.190757.com'
@@ -3277,7 +3275,6 @@ payload:
   - '+.36w.co'
   - '+.36yc.com'
   - '+.36yh.com'
-  - '+.36zhen.com'
   - '+.37.com'
   - '+.370fd.com'
   - '+.370fd.net'
@@ -3454,7 +3451,6 @@ payload:
   - '+.3dinnet.com'
   - '+.3dkezhan.com'
   - '+.3dkk.com'
-  - '+.3dkoukou.com'
   - '+.3dkunshan.com'
   - '+.3dllc.cc'
   - '+.3dly.com'
@@ -4644,7 +4640,6 @@ payload:
   - '+.52372.com'
   - '+.523touzi.com'
   - '+.523us.com'
-  - '+.523xs.com'
   - '+.525.life'
   - '+.5251.net'
   - '+.5252e.com'
@@ -4814,6 +4809,7 @@ payload:
   - '+.52shijing.com'
   - '+.52shipping.com'
   - '+.52shouyu.com'
+  - '+.52shufa.net'
   - '+.52shuw.cc'
   - '+.52shuxue.com'
   - '+.52sichou.com'
@@ -5942,7 +5938,6 @@ payload:
   - '+.7172737.com'
   - '+.7176.com'
   - '+.7190.cc'
-  - '+.719000.com'
   - '+.71908.com'
   - '+.7192.com'
   - '+.71acg.com'
@@ -6647,7 +6642,6 @@ payload:
   - '+.880you.com'
   - '+.88106.com'
   - '+.8825.com'
-  - '+.8827777.com'
   - '+.8828dl.com'
   - '+.88303887.com'
   - '+.88360.com'
@@ -7408,7 +7402,6 @@ payload:
   - '+.984g.com'
   - '+.985.so'
   - '+.98523.com'
-  - '+.985994.com'
   - '+.985college.com'
   - '+.985sy.com'
   - '+.98654.com'
@@ -7480,7 +7473,6 @@ payload:
   - '+.999dns.net'
   - '+.999inandon.com'
   - '+.999kan.com'
-  - '+.999meiju.tv'
   - '+.999tea.com'
   - '+.999wx.com'
   - '+.999xy.net'
@@ -8170,7 +8162,6 @@ payload:
   - '+.aginomoto.com'
   - '+.agiso.com'
   - '+.agnezanna.com'
-  - '+.agoodme.com'
   - '+.agora.io'
   - '+.agrantsem.com'
   - '+.agri35.com'
@@ -8305,7 +8296,6 @@ payload:
   - '+.aibo123.com'
   - '+.aibooks.cc'
   - '+.aibosha.com'
-  - '+.aibusy.com'
   - '+.aicai.com'
   - '+.aicaicdn.com'
   - '+.aicaike.com'
@@ -8616,7 +8606,6 @@ payload:
   - '+.aiykj.com'
   - '+.aiyou.com'
   - '+.aiyou.tv'
-  - '+.aiyouman.com'
   - '+.aiyoumi.com'
   - '+.aiyoweia.com'
   - '+.aiyuangong.com'
@@ -8632,7 +8621,6 @@ payload:
   - '+.aizhibaby.com'
   - '+.aizhicn.com'
   - '+.aizhigu.tv'
-  - '+.aizhizu.com'
   - '+.aizhuizhui.com'
   - '+.aiziti.net'
   - '+.aizongyi.com'
@@ -8686,7 +8674,6 @@ payload:
   - '+.akomr.com'
   - '+.akoofs.com'
   - '+.akppt.net'
-  - '+.akq.ee'
   - '+.akr-developers.com'
   - '+.akscan.com'
   - '+.akswe.com'
@@ -9791,7 +9778,6 @@ payload:
   - '+.assets-global.viveport.com'
   - '+.assets.analog.com'
   - '+.assets.uxengine.net'
-  - '+.assets.volvocars.com'
   - '+.assrt.net'
   - '+.astbbs.com'
   - '+.astestech.com'
@@ -10048,7 +10034,6 @@ payload:
   - '+.aycav.com'
   - '+.ayfdc.com'
   - '+.ayfy.com'
-  - '+.aygjj.com'
   - '+.ayguge.com'
   - '+.ayibang.com'
   - '+.ayidada.com'
@@ -10521,7 +10506,6 @@ payload:
   - '+.banmamedia.com'
   - '+.banmasrf.com'
   - '+.banpie.info'
-  - '+.banquanyin.com'
   - '+.banqumusic.com'
   - '+.banri.me'
   - '+.bansha.com'
@@ -12750,7 +12734,6 @@ payload:
   - '+.bxwx520.com'
   - '+.bxwx99.com'
   - '+.bxxy.com'
-  - '+.bxycw.com'
   - '+.bxynzz.com'
   - '+.bxyuer.com'
   - '+.bxzhiku.com'
@@ -12795,7 +12778,6 @@ payload:
   - '+.bynsyh.com'
   - '+.byprxy.com'
   - '+.byqcxy.com'
-  - '+.byqok.com'
   - '+.byr-navi.com'
   - '+.byr.cc'
   - '+.byr.wiki'
@@ -13334,7 +13316,6 @@ payload:
   - '+.cbevent.com'
   - '+.cbex.com'
   - '+.cbfau.com'
-  - '+.cbfook.com'
   - '+.cbgcloud.com'
   - '+.cbi360.net'
   - '+.cbi88.com'
@@ -14367,7 +14348,6 @@ payload:
   - '+.cheari.com'
   - '+.chebaba.com'
   - '+.chebada.com'
-  - '+.chebao360.com'
   - '+.checheboke.com'
   - '+.chechong.com'
   - '+.check.cc'
@@ -14840,7 +14820,6 @@ payload:
   - '+.chinacsf.com'
   - '+.chinactv.com'
   - '+.chinaculture.org'
-  - '+.chinacxgd.com'
   - '+.chinacxjs.org'
   - '+.chinacyzf.org'
   - '+.chinadafen.com'
@@ -18033,7 +18012,6 @@ payload:
   - '+.d1tele.com'
   - '+.d1xf.net'
   - '+.d1xn.com'
-  - '+.d1xtw.com'
   - '+.d1xz.net'
   - '+.d1ye.com'
   - '+.d20.net'
@@ -19365,6 +19343,7 @@ payload:
   - '+.dinais.com'
   - '+.dindin.com'
   - '+.dingdanggj.com'
+  - '+.dingdangnao.com'
   - '+.dingdangsheji.com'
   - '+.dingdean.com'
   - '+.dingdian.la'
@@ -19938,7 +19917,6 @@ payload:
   - '+.donglizhixin.com'
   - '+.dongman.fm'
   - '+.dongmansoft.com'
-  - '+.dongmanwang.com'
   - '+.dongmanxingkong.com'
   - '+.dongmiban.com'
   - '+.dongnanmaifeng.com'
@@ -20205,6 +20183,7 @@ payload:
   - '+.draveness.me'
   - '+.drawyoo.com'
   - '+.drcact.com'
+  - '+.drcbank.com'
   - '+.drcg8.com'
   - '+.drclvs.com'
   - '+.drcuiyutao.com'
@@ -20323,6 +20302,7 @@ payload:
   - '+.dttc-icp.com'
   - '+.dttt.net'
   - '+.dtu1.vip'
+  - '+.dtuosh.com'
   - '+.dturl.cc'
   - '+.dtuyun.com'
   - '+.dtxmw.com'
@@ -20458,7 +20438,6 @@ payload:
   - '+.duolebo.com'
   - '+.duolegame.com'
   - '+.duolerong.com'
-  - '+.duolingptfe.com'
   - '+.duolunmoma.org'
   - '+.duoluodeyu.com'
   - '+.duoluohua.com'
@@ -20493,7 +20472,6 @@ payload:
   - '+.duowan.com'
   - '+.duowanns.com'
   - '+.duoxinqi.com'
-  - '+.duoxj.com'
   - '+.duoyewu.com'
   - '+.duoyi.com'
   - '+.duoyinsu.com'
@@ -21093,7 +21071,6 @@ payload:
   - '+.ecigm.com'
   - '+.ecitic.com'
   - '+.ecjson.com'
-  - '+.ecjtu.net'
   - '+.eckjzx.com'
   - '+.ecloud.hk'
   - '+.ecmagnet.com'
@@ -22892,6 +22869,7 @@ payload:
   - '+.fengxianrc.com'
   - '+.fengxiaotx.com'
   - '+.fengxuan.co'
+  - '+.fengxuelin.com'
   - '+.fengyan.cc'
   - '+.fengye.cool'
   - '+.fengyitong.name'
@@ -23227,10 +23205,8 @@ payload:
   - '+.flamesky.org'
   - '+.flamingcold.com'
   - '+.flaredup.com'
-  - '+.flash127.com'
   - '+.flash8.net'
   - '+.flash8f.com'
-  - '+.flashdemo.net'
   - '+.flashempire.com'
   - '+.flashgame163.com'
   - '+.flashgene.com'
@@ -23404,7 +23380,6 @@ payload:
   - '+.for68.com'
   - '+.forbeschina.com'
   - '+.forbetty.com'
-  - '+.forbugs.net'
   - '+.forbuyers.com'
   - '+.forcemz.net'
   - '+.ford.com'
@@ -23613,6 +23588,7 @@ payload:
   - '+.fsdhub.com'
   - '+.fsecity.com'
   - '+.fsesa.com'
+  - '+.fsfund.com'
   - '+.fsgejian.com'
   - '+.fsgzhg.com'
   - '+.fshd.com'
@@ -28187,6 +28163,7 @@ payload:
   - '+.hmxw.com'
   - '+.hmyz.com'
   - '+.hmz.com'
+  - '+.hmzixin.com'
   - '+.hmzone.com'
   - '+.hmzs.net'
   - '+.hmzx163.com'
@@ -33476,7 +33453,6 @@ payload:
   - '+.jjplane.com'
   - '+.jjppt.com'
   - '+.jjqj.net'
-  - '+.jjrfw.com'
   - '+.jjrjd.com'
   - '+.jjsedu.org'
   - '+.jjshang.com'
@@ -33964,7 +33940,6 @@ payload:
   - '+.jsharer.com'
   - '+.jshasl.com'
   - '+.jshbank.com'
-  - '+.jshddq.net'
   - '+.jshmrcb.com'
   - '+.jshnh.com'
   - '+.jshqjt.com'
@@ -34937,7 +34912,6 @@ payload:
   - '+.kayoudi.com'
   - '+.kaytrip.com'
   - '+.kaytune.com'
-  - '+.kazaff.me'
   - '+.kazakcnr.com'
   - '+.kazhifu.com'
   - '+.kb.cc'
@@ -35522,6 +35496,7 @@ payload:
   - '+.kolstore.com'
   - '+.komect.com'
   - '+.kometo.com'
+  - '+.koncoo.com'
   - '+.konekomoe.com'
   - '+.konfan.net'
   - '+.kongapi.com'
@@ -36433,7 +36408,6 @@ payload:
   - '+.laojiuxitong.com'
   - '+.laoke.com'
   - '+.laolai.com'
-  - '+.laolaile521.com'
   - '+.laolaosi.com'
   - '+.laoliang.net'
   - '+.laoliboke.com'
@@ -37542,6 +37516,7 @@ payload:
   - '+.lionaka.com'
   - '+.lionelliu.com'
   - '+.lionmobo.com'
+  - '+.lionmobo.net'
   - '+.lipai365.com'
   - '+.lipf.tech'
   - '+.lipian.com'
@@ -37701,7 +37676,6 @@ payload:
   - '+.liuyingqiang.com'
   - '+.liuzhichao.com'
   - '+.liuzhixiang.com'
-  - '+.liuzhoushide.com'
   - '+.liuzk.com'
   - '+.liuzongyang.com'
   - '+.liuzuo.com'
@@ -39479,7 +39453,6 @@ payload:
   - '+.mcsafebox.com'
   - '+.mcshiyan.com'
   - '+.mcsjtz.com'
-  - '+.mct01.com'
   - '+.mcu-home.com'
   - '+.mcufan.com'
   - '+.mcuisp.com'
@@ -41510,7 +41483,6 @@ payload:
   - '+.myunke.com'
   - '+.myunying.com'
   - '+.myushan.com'
-  - '+.myvoyo.com'
   - '+.mywakao.com'
   - '+.mywang.net'
   - '+.mywayboo.net'
@@ -43791,7 +43763,6 @@ payload:
   - '+.patsev.com'
   - '+.patsnapglobal.com'
   - '+.paul.pub'
-  - '+.pautoclub.com'
   - '+.paxdn.com'
   - '+.paxgl.com'
   - '+.paydxm.com'
@@ -44678,7 +44649,6 @@ payload:
   - '+.powzamedia.com'
   - '+.poxiaotv.com'
   - '+.pozou.com'
-  - '+.pp-sp.com'
   - '+.pp-xxgd.com'
   - '+.pp.cc'
   - '+.pp00.com'
@@ -45097,7 +45067,6 @@ payload:
   - '+.q3060.com'
   - '+.q5.com'
   - '+.q578.com'
-  - '+.q68.com'
   - '+.q6haqi.com'
   - '+.q6u.com'
   - '+.q77777777.com'
@@ -46736,7 +46705,6 @@ payload:
   - '+.raeblog.com'
   - '+.ragbear.com'
   - '+.raidc.com'
-  - '+.raidcn.com'
   - '+.rail-transit.com'
   - '+.railcn.net'
   - '+.rails365.net'
@@ -48545,6 +48513,7 @@ payload:
   - '+.seven7777.eu'
   - '+.sevencdn.com'
   - '+.sevenseas-china.com'
+  - '+.sevnday.com'
   - '+.sewise.com'
   - '+.sexytea2013.com'
   - '+.sf-airlines.com'
@@ -49057,6 +49026,7 @@ payload:
   - '+.shenshu.info'
   - '+.shenshuo.net'
   - '+.shenshuw.com'
+  - '+.shensuantang.com'
   - '+.shentongdata.com'
   - '+.shenweimicro.com'
   - '+.shenweisupport.com'
@@ -49320,7 +49290,6 @@ payload:
   - '+.shlcd.com'
   - '+.shld.com'
   - '+.shlhwlkj.com'
-  - '+.shlitree.com'
   - '+.shlll.net'
   - '+.shlmth.com'
   - '+.shlpk.com'
@@ -49504,7 +49473,6 @@ payload:
   - '+.shtdgj.com'
   - '+.shtdsc.com'
   - '+.shtefu.com'
-  - '+.shtengshi.com'
   - '+.shtennis.org'
   - '+.shtfqx.com'
   - '+.shtgds.com'
@@ -49779,7 +49747,6 @@ payload:
   - '+.shyunwei.net'
   - '+.shyuzhai.com'
   - '+.shyxcm.com'
-  - '+.shyxfdc.com'
   - '+.shyxwz.com'
   - '+.shyy6688.com'
   - '+.shyyp.net'
@@ -49812,7 +49779,6 @@ payload:
   - '+.sias-sha.com'
   - '+.sibfi.com'
   - '+.sibida.net'
-  - '+.sibub2c.com'
   - '+.sic.hk'
   - '+.sicheng.net'
   - '+.sicher-elevator.com'
@@ -51071,6 +51037,7 @@ payload:
   - '+.ssdvd.net'
   - '+.sseinfo.com'
   - '+.ssf.cc'
+  - '+.ssgabc.com'
   - '+.ssggg.com'
   - '+.ssgushi.com'
   - '+.ssine.cc'
@@ -52502,7 +52469,6 @@ payload:
   - '+.taobc.com'
   - '+.taobeihai.com'
   - '+.taobeirj.com'
-  - '+.taobot.com'
   - '+.taobz.com'
   - '+.taoc.cc'
   - '+.taocece.com'
@@ -52630,6 +52596,7 @@ payload:
   - '+.tastespirit.com'
   - '+.tastones.com'
   - '+.tastysteak.com'
+  - '+.tatace.com'
   - '+.tatatimes.com'
   - '+.tatazu.com'
   - '+.taterli.com'
@@ -53493,7 +53460,6 @@ payload:
   - '+.tjcondom.com'
   - '+.tjculture.com'
   - '+.tjdcsd.com'
-  - '+.tjdtdd.com'
   - '+.tjdwkj.com'
   - '+.tjdyf.com'
   - '+.tjfer.com'
@@ -53691,7 +53657,6 @@ payload:
   - '+.toidea.com'
   - '+.tok9.com'
   - '+.token-ad.com'
-  - '+.token.im'
   - '+.tokenglish.com'
   - '+.tokeninsight.com'
   - '+.tokenpocket.pro'
@@ -56747,7 +56712,6 @@ payload:
   - '+.wbiao.co'
   - '+.wbiao.com'
   - '+.wbini.com'
-  - '+.wbldjy.com'
   - '+.wbljjy.com'
   - '+.wbo529.com'
   - '+.wbolt.com'
@@ -58222,6 +58186,7 @@ payload:
   - '+.wntool.com'
   - '+.wnwb.com'
   - '+.wnzc.com'
+  - '+.wnzhbb.com'
   - '+.wnzhuishu.com'
   - '+.wnzy.net'
   - '+.wo-xa.com'
@@ -58908,6 +58873,7 @@ payload:
   - '+.www.djivideos.com'
   - '+.www.ericsson.com'
   - '+.www.globalsign.com'
+  - '+.www.gov.mo'
   - '+.www.htc.com'
   - '+.www.htcsense.com'
   - '+.www.kaspersky.com'
@@ -60165,7 +60131,6 @@ payload:
   - '+.xiejiahe.com'
   - '+.xiejianji.com'
   - '+.xiejiaxin.com'
-  - '+.xiejing.com'
   - '+.xieliqun.com'
   - '+.xier.tech'
   - '+.xiesk.com'
@@ -61383,6 +61348,7 @@ payload:
   - '+.xujianhua.com'
   - '+.xujun.org'
   - '+.xukai.xyz'
+  - '+.xulaoshi68.com'
   - '+.xuliangwei.com'
   - '+.xulihang.me'
   - '+.xulizui6.com'
@@ -61936,7 +61902,6 @@ payload:
   - '+.yankanshu.net'
   - '+.yankanzw.com'
   - '+.yankay.com'
-  - '+.yanlinghm.com'
   - '+.yanliu.org'
   - '+.yanlutong.com'
   - '+.yanmbjiage.com'
@@ -62503,7 +62468,6 @@ payload:
   - '+.yidoutang.com'
   - '+.yidu.cc'
   - '+.yidui.me'
-  - '+.yidukindle.com'
   - '+.yidumen.com'
   - '+.yidun.com'
   - '+.yiernews.com'
@@ -62591,7 +62555,6 @@ payload:
   - '+.yijingji.com'
   - '+.yijintong.net'
   - '+.yijirecovery.com'
-  - '+.yijiupeixun.com'
   - '+.yijiupi.com'
   - '+.yijiuplus.com'
   - '+.yijueweb.com'
@@ -63100,7 +63063,6 @@ payload:
   - '+.ylhaitao.com'
   - '+.ylhh.net'
   - '+.ylhsrsrc.com'
-  - '+.ylhuake.com'
   - '+.ylife9.com'
   - '+.ylimg.com'
   - '+.yliyun.com'
@@ -63720,7 +63682,6 @@ payload:
   - '+.yozodocs.com'
   - '+.yozooffice.com'
   - '+.yozosoft.com'
-  - '+.yozrun.com'
   - '+.yozsc.com'
   - '+.yp007.net'
   - '+.yp1151.com'
@@ -64468,8 +64429,6 @@ payload:
   - '+.yuxitech.com'
   - '+.yuxungs.com'
   - '+.yuxunzy.com'
-  - '+.yuyanpingce.com'
-  - '+.yuyantang168.com'
   - '+.yuyicai.com'
   - '+.yuyin.tv'
   - '+.yuyu.com'
@@ -66163,6 +66122,7 @@ payload:
   - '+.zhuayou.com'
   - '+.zhuayoukong.com'
   - '+.zhuazi.com'
+  - '+.zhubai.love'
   - '+.zhubaijia.com'
   - '+.zhubajie.com'
   - '+.zhubajie.la'
@@ -66596,7 +66556,6 @@ payload:
   - '+.zjjgcyz.com'
   - '+.zjjlvxing.com'
   - '+.zjjlvyou8264.com'
-  - '+.zjjmcly.com'
   - '+.zjjr.com'
   - '+.zjjsbank.com'
   - '+.zjjsit.com'
@@ -67277,7 +67236,6 @@ payload:
   - '+.zuowenwang.net'
   - '+.zuowenxue.com'
   - '+.zuowenzhai.com'
-  - '+.zuowenzhang.com'
   - '+.zuowenzhitiao.com'
   - '+.zuoxiaolong.com'
   - '+.zuoye5.com'
