--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1070,7 +1070,6 @@ payload:
   - '+.118114.net'
   - '+.1188.com'
   - '+.1189.tv'
-  - '+.118cha.com'
   - '+.118cy.com'
   - '+.118jm.com'
   - '+.118pan.com'
@@ -1237,6 +1236,7 @@ payload:
   - '+.126ts.com'
   - '+.126x.com'
   - '+.126z.net'
+  - '+.126ziyuan.com'
   - '+.127.net'
   - '+.1278721.com'
   - '+.12799.com'
@@ -3626,6 +3626,7 @@ payload:
   - '+.4009515151.com'
   - '+.4009870870.com'
   - '+.4009991000.com'
+  - '+.4009998797.com'
   - '+.400cx.com'
   - '+.400gb.com'
   - '+.400iu.com'
@@ -5267,6 +5268,7 @@ payload:
   - '+.59w.net'
   - '+.59wj.com'
   - '+.59yx.com'
+  - '+.5a3q.com'
   - '+.5a49.com'
   - '+.5a8.org'
   - '+.5aaa.com'
@@ -8186,6 +8188,7 @@ payload:
   - '+.ah8.cc'
   - '+.ah9yu.com'
   - '+.ahacpp.com'
+  - '+.ahafm.com'
   - '+.ahalei.com'
   - '+.ahanxun.com'
   - '+.ahao.moe'
@@ -9714,7 +9717,6 @@ payload:
   - '+.asgxsy.com'
   - '+.ashan.org'
   - '+.ashj.com'
-  - '+.ashma.info'
   - '+.ashvsash.com'
   - '+.ashvsash.net'
   - '+.asia-dns.com'
@@ -12173,6 +12175,7 @@ payload:
   - '+.bobo.com'
   - '+.bobopic.com'
   - '+.bobopos.com'
+  - '+.bobouny.com'
   - '+.bobtj.com'
   - '+.bocaidaka.com'
   - '+.boce.com'
@@ -14249,6 +14252,7 @@ payload:
   - '+.chaojideng.com'
   - '+.chaojifan.com'
   - '+.chaojifangyu.com'
+  - '+.chaojihetong.com'
   - '+.chaojilian.net'
   - '+.chaojilock.com'
   - '+.chaojishipin.com'
@@ -14330,6 +14334,7 @@ payload:
   - '+.chcedo.com'
   - '+.chcnav.com'
   - '+.chcoin.com'
+  - '+.chcpd.com'
   - '+.chczz.com'
   - '+.chda.net'
   - '+.chdajob.com'
@@ -17809,7 +17814,6 @@ payload:
   - '+.cxxjs.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
-  - '+.cxybl.com'
   - '+.cxyd.net'
   - '+.cxyfjy.com'
   - '+.cxyl.org'
@@ -19797,6 +19801,7 @@ payload:
   - '+.docschina.org'
   - '+.docsou.com'
   - '+.doctorcom.com'
+  - '+.doctorxiong.club'
   - '+.documents.cdnetworks.com'
   - '+.docx88.com'
   - '+.doczhi.com'
@@ -19893,7 +19898,6 @@ payload:
   - '+.dongfeng-honda-jade.com'
   - '+.dongfeng-honda-ur-v.com'
   - '+.dongfeng-honda-xr-v.com'
-  - '+.dongfeng-honda.com'
   - '+.dongfeng-nissan.com'
   - '+.dongfeng.net'
   - '+.dongfengtrucks.com'
@@ -19902,7 +19906,6 @@ payload:
   - '+.dongge.com'
   - '+.donghaifunds.com'
   - '+.donghao.org'
-  - '+.donghengjt.com'
   - '+.donghongqiao.com'
   - '+.donghuaxsp.com'
   - '+.donghulvdao.com'
@@ -22549,7 +22552,6 @@ payload:
   - '+.fastreportcn.com'
   - '+.fastsoc.com'
   - '+.fastsoso.cc'
-  - '+.fastwebcdn.com'
   - '+.fat999.com'
   - '+.fatedier.com'
   - '+.fatiao.pro'
@@ -23382,6 +23384,7 @@ payload:
   - '+.forbetty.com'
   - '+.forbuyers.com'
   - '+.forcemz.net'
+  - '+.forcger.com'
   - '+.ford.com'
   - '+.fordgo.com'
   - '+.forenose.com'
@@ -27494,7 +27497,6 @@ payload:
   - '+.helishun.com'
   - '+.heliuyan.com'
   - '+.heliweb.net'
-  - '+.helixcommunity.org'
   - '+.hello-code.com'
   - '+.hello-inc.com'
   - '+.hello-mom.com'
@@ -28488,7 +28490,6 @@ payload:
   - '+.hoopchina.com'
   - '+.hoopugames.net'
   - '+.hoosho.com'
-  - '+.hooshong.com'
   - '+.hooyagames.com'
   - '+.hooyoo.com'
   - '+.hope-tarsus.com'
@@ -29586,7 +29587,6 @@ payload:
   - '+.huyouxiong.com'
   - '+.huyuncdn.com'
   - '+.huyuxx.com'
-  - '+.huzcoop.com'
   - '+.huzhan.com'
   - '+.huzhao1.com'
   - '+.huzheng.org'
@@ -29657,7 +29657,6 @@ payload:
   - '+.hxbxw.com'
   - '+.hxcdn.net'
   - '+.hxchem.net'
-  - '+.hxcpp83.com'
   - '+.hxct.com'
   - '+.hxdi.com'
   - '+.hxdkfp.com'
@@ -34381,7 +34380,6 @@ payload:
   - '+.jx3yymj.com'
   - '+.jxage.com'
   - '+.jxal.net'
-  - '+.jxalt.com'
   - '+.jxbin.com'
   - '+.jxc4.com'
   - '+.jxcaipu.com'
@@ -37817,7 +37815,6 @@ payload:
   - '+.llsapp.com'
   - '+.llscdn.com'
   - '+.llsops.com'
-  - '+.llss.us'
   - '+.llsserver.com'
   - '+.llssite.com'
   - '+.llsstaging.com'
@@ -37971,7 +37968,6 @@ payload:
   - '+.loli.cd'
   - '+.loli.ee'
   - '+.loli.my'
-  - '+.lolico.moe'
   - '+.loliloli.moe'
   - '+.loliloli.net'
   - '+.lolip.net'
@@ -40190,6 +40186,7 @@ payload:
   - '+.mincdn.com'
   - '+.mincoder.com'
   - '+.mindai.com'
+  - '+.mindcherish.com'
   - '+.mindhave.com'
   - '+.mindmanager.cc'
   - '+.mindmanagerchina.com'
@@ -42710,6 +42707,7 @@ payload:
   - '+.nync.com'
   - '+.nypd520.com'
   - '+.nyrsksw.com'
+  - '+.nyshszh.com'
   - '+.nysmfc.com'
   - '+.nyyzjg.com'
   - '+.nyzydz.com'
@@ -43115,7 +43113,6 @@ payload:
   - '+.ooclab.com'
   - '+.ooe.la'
   - '+.oogcw.com'
-  - '+.oogps.com'
   - '+.oohdear.com'
   - '+.oolap.com'
   - '+.oollttqq.com'
@@ -45549,7 +45546,6 @@ payload:
   - '+.qihuayao.com'
   - '+.qihucdn.com'
   - '+.qihuiwang.com'
-  - '+.qihuor.com'
   - '+.qihuorumen.com'
   - '+.qii404.me'
   - '+.qiigame.com'
@@ -46595,6 +46591,7 @@ payload:
   - '+.qy6.com'
   - '+.qy6.net'
   - '+.qyaaaa.com'
+  - '+.qybeiyong.com'
   - '+.qybook.net'
   - '+.qyc2008.com'
   - '+.qycn.com'
@@ -47246,7 +47243,6 @@ payload:
   - '+.roadsigngroup.com'
   - '+.robam.com'
   - '+.robei.com'
-  - '+.roboo.com'
   - '+.robook.com'
   - '+.robot-china.com'
   - '+.robotedu.org'
@@ -47451,6 +47447,7 @@ payload:
   - '+.rssmv.com'
   - '+.rsty77.com'
   - '+.rsw163.com'
+  - '+.rsxc01.com'
   - '+.rszfg.com'
   - '+.rt-blend.com'
   - '+.rt-thread.io'
@@ -47760,6 +47757,7 @@ payload:
   - '+.salonglong.com'
   - '+.salongweb.com'
   - '+.salonwith.com'
+  - '+.salute88.com'
   - '+.samanlehua.com'
   - '+.samebar.com'
   - '+.samhotele.com'
@@ -48870,6 +48868,7 @@ payload:
   - '+.shbj.com'
   - '+.shbnrj.com'
   - '+.shbobo.com'
+  - '+.shbund18h.com'
   - '+.shbyer.com'
   - '+.shcaoan.com'
   - '+.shcas.net'
@@ -51456,7 +51455,6 @@ payload:
   - '+.suningcloud.com'
   - '+.suningestate.com'
   - '+.suningholdings.com'
-  - '+.sunjian1414.com'
   - '+.sunjidong.net'
   - '+.sunjiwen.com'
   - '+.sunjix.com'
@@ -52273,7 +52271,6 @@ payload:
   - '+.taig.com'
   - '+.taigaoxiao.com'
   - '+.taigongwl.com'
-  - '+.taigpro.com'
   - '+.taiguoyu.com'
   - '+.taihaikj.com'
   - '+.taihainet.com'
@@ -52912,6 +52909,7 @@ payload:
   - '+.tepcb.com'
   - '+.tepintehui.com'
   - '+.terabuy.com'
+  - '+.terapines.com'
   - '+.terence2008.info'
   - '+.terencexie.com'
   - '+.teridge.com'
@@ -54153,6 +54151,7 @@ payload:
   - '+.tsov.net'
   - '+.tsp189.com'
   - '+.tspsy.com'
+  - '+.tspweb.com'
   - '+.tsqt.net'
   - '+.tsqw.com'
   - '+.tsrcw.com'
@@ -59049,7 +59048,6 @@ payload:
   - '+.wz132.com'
   - '+.wz16.net'
   - '+.wz5.com'
-  - '+.wzaobao.com'
   - '+.wzcheshi.com'
   - '+.wzciming.com'
   - '+.wzdai.com'
@@ -59720,6 +59718,7 @@ payload:
   - '+.xiao-bo.com'
   - '+.xiao-new.com'
   - '+.xiao-sports.com'
+  - '+.xiao.lu'
   - '+.xiao6.tv'
   - '+.xiao84.com'
   - '+.xiao89.com'
@@ -62623,7 +62622,6 @@ payload:
   - '+.yiminw.com'
   - '+.yimisoft.com'
   - '+.yimitongxue.com'
-  - '+.yimity.com'
   - '+.yimiyisu.com'
   - '+.yimizhibo.tv'
   - '+.yimoe.cc'
@@ -66910,7 +66908,6 @@ payload:
   - '+.zouzhiqiang.com'
   - '+.zowoyoo.com'
   - '+.zoyoo.net'
-  - '+.zozoka.com'
   - '+.zp.do'
   - '+.zp0716.com'
   - '+.zp0737.com'
@@ -67071,7 +67068,6 @@ payload:
   - '+.ztedevice.com'
   - '+.ztedevices.com'
   - '+.ztedu8.com'
-  - '+.ztehn.com'
   - '+.ztemap.com'
   - '+.ztems.com'
   - '+.ztestin.com'
